po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-22 00:46+0000\n"
-"Last-Translator: Bojana Radulović <bojana@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-02 11:40+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,7 +264,7 @@ msgstr "Šablon mailing poruke"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Override Verp"
-msgstr ""
+msgstr "Redefiniši VERP"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Creator"
@@ -345,15 +345,15 @@ msgstr "Kriterijumi testiranja"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Winner Criteria"
-msgstr ""
+msgstr "Kriterijumi pobede"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "URL for Winner Criteria"
-msgstr ""
+msgstr "URL za kriterijume pobede"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Declaration Time"
-msgstr ""
+msgstr "Vreme objave"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Group Percentage"
@@ -389,7 +389,7 @@ msgstr "Pretraga mailing grupe"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Search Arguments"
-msgstr ""
+msgstr "Argumenti pretrage mailing grupe"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job ID"
@@ -1995,7 +1995,7 @@ msgid ""
 " <i><b>not</b></i> been added to any mailing lists. If this is your email "
 "address and you <i><b>wish to opt out</b></i> please enter your email "
 "address below for verification purposes:"
-msgstr "Ako to nije adresa vaše pošte, nema potrebe da išta uradite. Imate <i> <b> ne </ b> </ i> koji je dodat na svaku mejling listu. Ako je ovo vaša mejl adresa i želite da <i> <b> onemogućite </ b> </ i> unesite vašu mejl adresu ispod svrhe verifikacije:"
+msgstr "Ukoliko ovo nije vaša email adresa, nema potrebe da išta uradite. <i><b>Niste</b></i> dodati ni na jednu mailing listu. Ako je ovo vaša mejl adresa i želite da se<i><b>isključite</b></i>unesite vašu mejl adresu ispod zbog verifikacije:"
 
 #: templates/CRM/Mailing/Form/Schedule.hlp
 msgid "Scheduling and Sending Mailings"
@@ -2028,7 +2028,7 @@ msgid ""
 "not being sent, ask the system administrator or technical support contact "
 "for your site to verify that the automated task (&quot;cron job&quot;) is "
 "running - and how frequently."
-msgstr ""
+msgstr "<strong>Savet za rešavanje problema</strong> - Ukoliko primetite da nijedan vaš mailing nije poslat, kontaktirajte vašeg administratora ili tehničku podršku za vaš sajt i zamolite ih da provere da li automatizovani zadatak (&quot;cron job&quot;) radi - i koliko često."
 
 #: templates/CRM/Mailing/Form/Schedule.tpl
 msgid ""
@@ -2087,7 +2087,7 @@ msgid ""
 "number of recipients selected to receive this mailing is shown in the box to"
 " the right. If this count doesn't match your expectations, click "
 "<strong>Previous</strong> to review your selection(s)."
-msgstr ""
+msgstr "Ova podešavanja kontrolišu praćenje i odgovaranje na akcije primalaca. Broj primalaca koji će dobiti ovaj mailing je prikazan u kućici sa desne strane. Ukoliko je ovaj broj veći ili manji od očekivanog, kliknite na <strong>Prethodno</strong> da proverite vašu selekciju (slekcije)."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid "Track the number of times recipients click each link in this mailing."
@@ -2110,13 +2110,13 @@ msgstr "Prati koliko puta su primaoci otvorili ovaj mailing u svom mail softveru
 msgid ""
 "Recipients' replies are sent to a CiviMail specific address instead of the "
 "sender's address so they can be stored within CiviCRM."
-msgstr ""
+msgstr "Odgovori primalaca se šalju na specifičnu CiviMail adresu umesto na adresu sa koje je mailing stigao kako bi mogli da se sačuvaju u CiviCRMu."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "If a recipient replies to this mailing, forward the reply to the FROM Email "
 "address specified for the mailing."
-msgstr ""
+msgstr "Ukoliko primalac odgovori na ovaj mailing, prosledi odgovor na OD adresu sa koje je mailing stigao."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2191,7 +2191,7 @@ msgstr "Proverite sadržaj i formatiranje."
 msgid ""
 "If you are using mail-merge tokens, check that they have been replaced with "
 "expected values."
-msgstr ""
+msgstr "Ukoliko koristite mail-merge tokene, proverite da li su zamenjeni očekivanim vrednostima."
 
 #: templates/CRM/Mailing/Form/Test.hlp templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2300,20 +2300,20 @@ msgstr "Ponekad veći broj ljudi -- kao što su supružnici, roditelji ili deca 
 msgid ""
 "To send only one message to the shared address, enable this option. Mail-"
 "merge tokens will be filled for only one person."
-msgstr ""
+msgstr "Kako biste poslali samo jednu poruku zajedničkoj adresi, uključite ovu opciju. Tokeni za mail-merge će biti popunjeni samo za jednu osobu."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "To send separate messages for each person, disable this option. Mail-merge "
 "tokens will be filled separately for each person."
-msgstr ""
+msgstr "Da pošaljete odvojeno poruke svakoj osobi, isključite ovu opciju. Tokeni za mail-merge će biti popunjeni zasebno za svaku osobu."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "This option controls who can view the contents of this email on your "
 "website. The link can be included by inserting the \"Mailing permalink\" "
 "token (place it in a link when composing in HTML mode)."
-msgstr ""
+msgstr "I"
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid "The options for mailing visibility are:"
@@ -2440,7 +2440,7 @@ msgid ""
 "scheduled delivery date and time is past, ask the system administrator or "
 "technical support contact for your site to verify that the automated mailer "
 "task ('cron job') is running - and how frequently."
-msgstr ""
+msgstr "<strong>Dostava mailinga još nije počela.</strong> Ukoliko je zakazano vreme dostave u prošlosti, kontaktirajte vašeg administratora ili tehničku podršku za vaš sajt i zamolite ih da provere da li automatizovani zadatak (&quot;cron job&quot;) radi - i koliko često."
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Included"
@@ -2582,11 +2582,11 @@ msgstr "ID odgovora"
 
 #: CRM/Mailing/Event/DAO/Reply.php
 msgid "Reply Timestamp"
-msgstr ""
+msgstr "Vremenska oznaka za odgovor"
 
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Trackable URL Open ID"
-msgstr ""
+msgstr "ID otvorenih ispraćenih URLova"
 
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Trackable Url"
@@ -2598,7 +2598,7 @@ msgstr "Upišite HTML ili tekstualni format sadržaja poruke."
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Public View"
-msgstr ""
+msgstr "Javni pregled"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
