po: update po/sr_RS@latin/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-18 11:29+0000\n"
+"PO-Revision-Date: 2017-03-02 14:31+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -53,7 +53,7 @@ msgid ""
 "This contact(s) can not be permanently deleted because the contact record is"
 " linked to one or more live financial transactions. Deleting this contact "
 "would result in the loss of financial data."
-msgstr ""
+msgstr "Ovaj kontakt (kontakti) ne mogu biti permanentno obrisani zato što je zapis o kontaktu povezan sa jednom ili više transakcija koje su u toku. Brisanje ovog kontakta bi dovelo do gubitka podataka o finansijskim transakcijama."
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
@@ -138,7 +138,7 @@ msgstr "Opis finansijskog računa"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Parent"
-msgstr ""
+msgstr "Nadređeni finansijski račun"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Header Financial Account?"
@@ -421,7 +421,7 @@ msgstr ""
 #: CRM/Financial/Form/FinancialType.php
 msgid ""
 "A financial type with this name already exists. Please select another name."
-msgstr ""
+msgstr "Finansijski tip sa ovim imenom već postoji. Izaberite drugo ime."
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Owner"
