--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-01 14:52+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-02 14:21+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1244,7 +1244,7 @@ msgstr "Dostavljeno"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Accepted Rate"
-msgstr ""
+msgstr "Stopa prihvatanja"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Bounce Rate"
@@ -1768,7 +1768,7 @@ msgstr "Naslov ankete "
 
 #: templates/CRM/Report/Form/Campaign/SurveyCoverSheet.tpl
 msgid "Response Codes"
-msgstr ""
+msgstr "Šifre odgovora"
 
 #: templates/CRM/Report/Form/Campaign/SurveyCoverSheet.tpl
 msgid "Q%1 = %2"
