--- a/po/pt_PT/common-base.po
+++ b/po/pt_PT/common-base.po
@@ -8,6 +8,7 @@
 # Nana, 2013
 # Nana, 2012
 # Emilio Fialho <emilio_fialho@hotmail.com>, 2016
+# Emílio Fialho <skopemans@gmail.com>, 2017
 # jachambel <jose.chambel@gmail.com>, 2012
 # Joao Galvao, 2015
 # jachambel <jose.chambel@gmail.com>, 2012
@@ -26,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-03-03 13:18+0000\n"
+"Last-Translator: Emílio Fialho <skopemans@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2056,7 +2057,7 @@ msgstr "País"
 #: CRM/Contact/Form/Search/Criteria.php CRM/Core/DAO/Address.php
 #: CRM/Core/DAO/County.php CRM/Core/Form.php xml/templates/civicrm_data.tpl
 msgid "County"
-msgstr "Distrito"
+msgstr "Concelho"
 
 #: CRM/Contact/BAO/Query.php CRM/Core/DAO/Worldregion.php
 msgid "World Region"
@@ -2223,7 +2224,7 @@ msgstr "Código Postal menor ou igual a '%1'"
 #: CRM/Core/Form.php CRM/Core/Payment/Form.php CRM/Core/Resources.php
 #: xml/templates/civicrm_data.tpl
 msgid "State/Province"
-msgstr "Estado/Região"
+msgstr "Distrito/Região"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search/Criteria.php
 #: templates/CRM/Contact/Form/Search/Criteria/ChangeLog.tpl
@@ -6697,7 +6698,7 @@ msgstr ""
 
 #: CRM/Core/DAO/County.php
 msgid "County Abbreviation"
-msgstr "Abrev. País"
+msgstr "Abrev. Concelho"
 
 #: CRM/Core/DAO/CustomField.php
 msgid "Custom Field ID"
@@ -8448,7 +8449,7 @@ msgstr ""
 
 #: CRM/Core/Form.php
 msgid "County does not match the selected State/Province"
-msgstr ""
+msgstr "Concelho inexistente no Distrito/Região selecionada"
 
 #: CRM/Core/I18n/Form.php templates/CRM/Core/I18n/Dialog.tpl
 #: xml/templates/languages.tpl
@@ -25236,7 +25237,7 @@ msgstr ""
 
 #: CRM/Core/DAO/County.php
 msgid "County ID"
-msgstr ""
+msgstr "Concelho ID"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Cache Minutes"
