--- a/po/de_DE/grant.po
+++ b/po/de_DE/grant.po
@@ -8,6 +8,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012-2013
 # Freddy Koschinsky <schollator@burning.name>, 2013
+# Guenter Hauptvogel <guenter986@gmail.com>, 2017
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2014-2015
 # metalmatze <matthias.hahn@web.de>, 2014
@@ -17,9 +18,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-03-06 18:28+0000\n"
+"Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -143,27 +144,27 @@ msgstr "Aktualisierte Zuschüsse: %1 (Gesamte Auswahl: %2)"
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
-msgstr ""
+msgstr "CiviGrant aufrufen."
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
-msgstr ""
+msgstr "Alle Zuwendungen anzeigen."
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
-msgstr ""
+msgstr "Zuwendungen bearbeiten."
 
 #: CRM/Grant/Info.php
 msgid "Create and update grants"
-msgstr ""
+msgstr "Erstellen und aktualisieren von Zuwendungen."
 
 #: CRM/Grant/Info.php
 msgid "delete in CiviGrant"
-msgstr ""
+msgstr "Löschen in CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "Delete grants"
-msgstr ""
+msgstr "Zuwendungen löschen"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
@@ -322,8 +323,8 @@ msgstr "Für diesen Kontakt wurden keine Zuschüsse gespeichert."
 
 #: CRM/Grant/Task.php
 msgid "Export grants"
-msgstr ""
+msgstr "Zuwendungen exportieren"
 
 #: CRM/Grant/Task.php
 msgid "Update grants"
-msgstr ""
+msgstr "Zuwendungen aktualisieren"
