--- a/po/de_DE/menu.po
+++ b/po/de_DE/menu.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-14 09:50+0000\n"
+"PO-Revision-Date: 2017-03-06 18:24+0000\n"
 "Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2188,7 +2188,7 @@ msgstr "CKEditor konfigurieren"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "CiviCRM Ressourcen"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
