po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-02 15:40+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-06 15:54+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -16424,7 +16424,7 @@ msgstr ""
 msgid ""
 "Select the source of the imported data. By default the following choices are"
 " possible:"
-msgstr ""
+msgstr "Odaberite izvor importovanih podataka. Prema podrazumevanim podešavanjima, moguće su sledeće opcije:"
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -16476,7 +16476,7 @@ msgid ""
 "default, the field will populate with the separator defined in your global "
 "settings. Common values include a comma, semicolon, or pipe character. To "
 "import a tab separated file, enter \"tab\" (without quotes) in the field."
-msgstr ""
+msgstr "Unesite karakter koji odvaja kolone sa podacima u vašem fajlu za import. Prema podrazumevanim podešavanjima, polje će biti popunjeno separatorom odabranim u vašim globalnim podešavanjima. Najčešće vrednosti su zapeta, tačka i zapeta ili vertikalna crta. Da biste importovali fajl koji je odvojen tabulatorom, u polje unesite \"tab\" (bez navodnika)."
 
 #: templates/CRM/Contact/Import/Form/DataSource.tpl
 msgid ""
@@ -16492,7 +16492,7 @@ msgstr "Opcije importa"
 
 #: templates/CRM/Contact/Import/Form/DataSource.tpl
 msgid "Select the format that is used for date fields in your import data."
-msgstr ""
+msgstr "Odaberite format koji koristite u poljima sa datumom u vašim podacima za import."
 
 #: templates/CRM/Contact/Import/Form/DataSource.tpl
 msgid ""
@@ -16515,25 +16515,25 @@ msgid ""
 "download a file with just these problem records - <a href='%2'>Download "
 "Conflicts</a>. Then correct them in the original import file, cancel this "
 "import and begin again at step 1."
-msgstr ""
+msgstr "CiviCRM je pronašao %1 zapisa sa konfliktnim email adresama u ovom fajlu sa podacima. Ukoliko nastavite, ovi zapisi će biti preskočeni. Ukoliko želite da ih korigujete možete preuzeti fajl u kome se nalaze samo problematični zapisi - <a href='%2'>Preuzmi konfliktne zapise</a>. Ispravite ih u originalnom fajlu za import, otkažite ovaj import i krenite od koraka 1."
 
 #: templates/CRM/Contact/Import/Form/Preview.tpl
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Total number of rows in the imported data."
-msgstr ""
+msgstr "Ukupan broj redova u importovanim podacima."
 
 #: templates/CRM/Contact/Import/Form/Preview.tpl
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
 "Rows with invalid data in one or more fields (for example, invalid email "
 "address formatting). These rows will be skipped (not imported)."
-msgstr ""
+msgstr "Postoje redovi sa nevažećim podacima u jednom ili više polja (na primer, nevažeće formatiranje email adrese). Ovi redovi će biti preskočeni (neće biti importovani)."
 
 #: templates/CRM/Contact/Import/Form/Preview.tpl
 msgid ""
 "Rows with conflicting email addresses within this file. These rows will be "
 "skipped (not imported)."
-msgstr ""
+msgstr "Redovi sa konfliktnim email adresama u ovom fajlu. Ovi redovi će biti preskočeni (neće biti importovani)."
 
 #: templates/CRM/Contact/Import/Form/Preview.tpl
 msgid "Add imported records to a new group"
@@ -16566,15 +16566,15 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected mismatched contact IDs. These records have not been "
 "updated."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je pronašao ID kontakta koji se ne slaže. Ovaj zapis neće biti ažuriran."
+msgstr[1] "CiviCRM je pronašao ID kontakata koji se ne slažu. Ovi zapisi neće biti ažurirani."
+msgstr[2] "CiviCRM je pronašao ID kontakata koji se ne slažu. Ovi zapisi neće biti ažurirani."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Mismatched Contacts</a>. You may then correct "
 "them, and import the new file with the corrected data."
-msgstr ""
+msgstr "Možete <a href='%1'>Preuzeti kontakte koji se ne slažu</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
@@ -16583,9 +16583,9 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected invalid data and/or formatting errors in %count "
 "records. These records have not been imported."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je detektovao nevažeće podatke i/ili greške u formatiranju u %count zapisu. Ovaj zapis neće biti importovan."
+msgstr[1] "CiviCRM je detektovao nevažeće podatke i/ili greške u formatiranju u %count zapisa. Ovi zapisi neće biti importovani."
+msgstr[2] "CiviCRM je detektovao nevažeće podatke i/ili greške u formatiranju u %count zapisa. Ovi zapisi neće biti importovani."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
@@ -16604,14 +16604,14 @@ msgstr[2] ""
 msgid ""
 "CiviCRM does not allow multiple contact records to have the same primary "
 "email address."
-msgstr ""
+msgstr "CiviCRM ne dozvoljava da veći broj zapisa o kontaktima ima istu primarnu adresu."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Conflicts</a>. You may then review these "
 "records to determine if they are actually conflicts, and correct the email "
 "addresses for those that are not."
-msgstr ""
+msgstr "Možete <a href='%1'>Preuzeti konflikte</a>. Možete pregledati ove zapise da utvrdite da li su zapravo konflikti, i ispravite email adrese za one koji nisu."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
@@ -16620,16 +16620,16 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected %count records which are duplicates of existing CiviCRM"
 " contact records."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je prepoznao %count zapis koji je duplikat već postojećeg CiviCRM zapisa o kontaktima."
+msgstr[1] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o kontaktima."
+msgstr[2] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o kontaktima."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Duplicates</a>. You may then review these "
 "records to determine if they are actually duplicates, and correct the email "
 "address for those that are not."
-msgstr ""
+msgstr "Možete <a href='%1'>Preuzeti duplikate</a>. Možete pregledati ove zapise da utvrdite da li su zapravo duplikati, i ispravite email adrese za one koji nisu."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
@@ -16639,19 +16639,19 @@ msgstr ""
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Rows with mismatched contact IDs... (NOT updated)."
-msgstr ""
+msgstr "Redovi sa konfliktnim ID brojevima kontakata (NISU ažurirani)."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Download Mismatched Contacts"
-msgstr ""
+msgstr "Preuzmi kontakte koji se ne slažu"
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Rows with conflicting email addresses (NOT imported)."
-msgstr ""
+msgstr "Redovi sa konfliktnim email adresama (NISU importovani)."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Rows which are duplicates of existing CiviCRM contact records."
-msgstr ""
+msgstr "Redovi koji su duplikati postojećih zapisa o kontaktima u CiviCRM-u."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Total Contacts"
@@ -16659,7 +16659,7 @@ msgstr "Ukupno kontakata"
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Total number of contact records created or modified during the import."
-msgstr ""
+msgstr "Ukupan broj kreiranih ili promenjenih zapisa o kontaktima za vreme importa."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Import to Groups"
@@ -16682,9 +16682,9 @@ msgstr[2] "%count kontakata dodato u postojeću grupu."
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "One contact NOT added (already in this group)."
 msgid_plural "%count contacts NOT added (already in this group)."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%count kontakt nije dodat (već je u ovoj grupi)."
+msgstr[1] "%count kontakata nije dodato (već su u ovoj grupi)."
+msgstr[2] "%count kontakata nisu dodati (već su u ovoj grupi)."
 
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid "Tagged Imported Contacts"
@@ -16717,7 +16717,7 @@ msgstr ""
 msgid ""
 "NOTE: Some of these searches may rely on specific site configurations - and "
 "may not work as expected on your site."
-msgstr ""
+msgstr "Beleška: Neke od ovih pretraga se oslanjaju na određena podešavanja sajta - i možda neće raditi na vašem sajtu kao što je očekivano."
 
 #: templates/CRM/Contact/Page/CustomSearch.tpl
 msgid ""
@@ -16744,12 +16744,12 @@ msgstr "Molimo unesite ime i primarnu adresu vaše organizacije."
 #: templates/CRM/Contact/Page/DashBoardDashlet.tpl
 msgid ""
 "Please enter a default FROM Email Address (for system-generated emails)."
-msgstr ""
+msgstr "Unesite podrazumevanu OD email adresu (za emailove koje generiše sistem)."
 
 #: templates/CRM/Contact/Page/DashBoardDashlet.tpl
 #: xml/templates/civicrm_data.tpl
 msgid "From Email Address"
-msgstr ""
+msgstr "OD email adresa"
 
 #: templates/CRM/Contact/Page/DashBoardDashlet.tpl
 msgid "Please configure a default mailbox for CiviMail."
@@ -17238,7 +17238,7 @@ msgstr "Nema sačuvanih pretraga. Da biste kreirali i sačuvali pretragu:"
 msgid ""
 "Use <a href='%1'>Find</a> or <a href='%2'>Advanced Search</a> form to enter "
 "search criteria"
-msgstr ""
+msgstr "Upotrebite formular <a href='%1'>Nađi</a> ili <a href='%2'>Naprednu pretragu</a> da unesete kriterijume pretrage."
 
 #: templates/CRM/Contact/Page/SavedSearch.tpl
 msgid "Run and refine the search criteria as necessary"
