po: update po/de_DE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -39,8 +39,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-06 20:17+0000\n"
-"Last-Translator: Guenter Hauptvogel <guenter986@gmail.com>\n"
+"PO-Revision-Date: 2017-03-07 14:15+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -700,19 +700,19 @@ msgstr "Geben Sie das Präfix ein, das auf der PDF-Rechnung angezeigt werden sol
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Credit Notes Prefix"
-msgstr "Prefix Gutschriften"
+msgstr "Präfix für Credit Notes"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for credit notes."
-msgstr "Geben Sie das Präfix ein, das in PDF für Gutschriften angezeigt werden soll."
+msgstr "Geben Sie das Präfix ein, das in PDF für Credit Notes angezeigt werden soll."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "For transmission"
-msgstr "Für Übertragung"
+msgstr "Zeitintervall für Fälligkeit"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Select the interval for due date."
-msgstr "Wählen Sie das Intervall für Fälligkeitsdatum aus."
+msgstr "Wählen Sie das Intervall für das Fälligkeitsdatum aus."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
@@ -720,7 +720,7 @@ msgstr "Notizen oder Standardformeln"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter note or message to be displayed on PDF invoice or credit notes "
-msgstr "Notiz oder Nachricht eingeben, die auf PDF-Rechnung oder Gutschriften angezeigt werden soll."
+msgstr "Notiz oder Nachricht eingeben, die auf PDF-Rechnungen oder Credit Notes angezeigt werden soll."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Automatically email invoice when user purchases online"
@@ -728,11 +728,11 @@ msgstr "Bei Online-Zahlungen Rechnung automatisch verschicken"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
-msgstr "Steuerformeln"
+msgstr "Steuerart"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Display Settings"
-msgstr "Steueranzeigeeinstellungen"
+msgstr "Anzeigeeinstellungen für Steuern"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Tax and Invoicing"
@@ -3123,7 +3123,7 @@ msgid ""
 "from the dashboard. Please first enable CiviCRM invoicing functionality <a "
 "href='%1'>Administer > CiviContribute > CiviContribute Component "
 "Settings</a>"
-msgstr "Um den angemeldeten Benutzern zu ermöglichen, Rechnungen und Gutschriften aus dem Dashboard herunterzuladen. Bitte aktivieren Sie zunächst die CiviCRM-Rechnungsfunktionalität <a href='%1'> Verwalten > CiviContribute > CiviContribute Component Settings</a>"
+msgstr "Um angemeldeten Benutzern zu erlauben, Rechnungen und Credit Notes aus dem Dashboard herunterzuladen. Bitte aktivieren Sie zunächst die CiviCRM-Rechnungsfunktionalität <a href='%1'> Verwalten > CiviContribute > CiviContribute Component Settings</a>"
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
