--- a/po/de_DE/common-components.po
+++ b/po/de_DE/common-components.po
@@ -13,7 +13,7 @@
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2015
 # Jo <jo@caj-augsburg.de>, 2012
-# Martin Peth <peth@systopia.de>, 2014-2016
+# Martin Peth <peth@systopia.de>, 2014-2017
 # metalmatze <matthias.hahn@web.de>, 2014
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-03-07 14:11+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -130,7 +130,7 @@ msgstr "Abrechnungsmodus"
 #: templates/CRM/Pledge/Page/Payment.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Due Date"
-msgstr "Zu erledigen bis"
+msgstr "Fällig"
 
 #: CRM/Admin/Form/RelationshipType.php
 #: templates/CRM/Admin/Page/RelationshipType.tpl
