--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -50,7 +50,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-10 14:18+0000\n"
+"PO-Revision-Date: 2017-03-07 14:10+0000\n"
 "Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -21440,7 +21440,7 @@ msgstr "Zugeordnete Aktivitäten"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Invoices / Credit Notes"
-msgstr "Rechnungen / Rückerstattungen"
+msgstr "Rechnungen / Credit Notes"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Street Address Parsing"
