--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-27 22:19+0000\n"
+"PO-Revision-Date: 2017-03-08 23:41+0000\n"
 "Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1309,7 +1309,7 @@ msgstr "Data de ingrés "
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Membership Source"
-msgstr "Font de l'afiliació"
+msgstr "Orígen de la pertinença"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 #: CRM/Report/Form/Member/Detail.php CRM/Report/Form/Member/Summary.php
