po: update po/ca_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/member.po
+++ b/po/ca_ES/member.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-27 22:18+0000\n"
+"PO-Revision-Date: 2017-03-08 23:56+0000\n"
 "Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -149,7 +149,7 @@ msgstr "Només membres relacionats"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Type(s)"
-msgstr "Tipus d'afiliació(ns)"
+msgstr "Tipus de pertineces"
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Member?"
@@ -389,7 +389,7 @@ msgstr "Sobreescriure l'estat?"
 
 #: CRM/Member/Form/Membership.php
 msgid "Record Membership Payment?"
-msgstr "Registrar el pagament d'una pertinença?"
+msgstr "Registrar el pagament de la pertinença?"
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Record Payment from a Different Contact?"
@@ -1158,7 +1158,7 @@ msgstr ""
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Select Membership Organization and then Membership Type."
-msgstr "Selecciona l'organització d'afiliació i després el tipus d'afiliació."
+msgstr "Seleccioneu l'organització de la pertinença i després el tipus de pertinença."
 
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipType.tpl
@@ -1173,17 +1173,17 @@ msgstr "Calcula la data de finalització de la pertinença segons aquest nombre 
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Source of this membership. This value is searchable."
-msgstr "Font de l'afiliació. Aquest camp és cercable."
+msgstr "Orígen de a pertinença. Aquest camp és cercable."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "When did this contact first become a member?"
-msgstr "En quina data va registrar la seva pertinença aquest contacte per primera vegada?"
+msgstr "En quina data aquest contacte va registrar la seva pertinença per primera vegada?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "First day of current continuous membership period. Start Date will be "
 "automatically set based on Membership Type if you don't select a date."
-msgstr "Primer dia del període actual de pertinença. Si no seleccioneu una data, aquesta s'establirà de forma automàtica en funció del tipus d'afiliació."
+msgstr "Primer dia del període actual de pertinença. Si no seleccioneu una data, aquesta s'establirà de forma automàtica en funció del tipus de pertinença."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Over-ride end date"
@@ -1218,7 +1218,7 @@ msgstr "Seleccionar aquesta casella per a gravar o actualitzar la informació de
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Membership Payment and Receipt"
-msgstr ""
+msgstr "Pagament de la pertinença i rebut"
 
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
@@ -2150,7 +2150,7 @@ msgstr ""
 #: templates/CRM/Member/Page/MembershipType.tpl
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Related"
-msgstr ""
+msgstr "Relacionat"
 
 #: templates/CRM/Member/Page/MembershipType.tpl
 msgid "Add Membership Type"
@@ -2171,14 +2171,14 @@ msgid ""
 "your configured membership status rules. However, if you want to assign a "
 "status manually and bypass automated status setting, check this box. Then "
 "you can select from the available status options."
-msgstr "La condició d'afiliat s'assigna i s'actualitza automàticament en base a les regles d'estat de l'afiliació. No obstant, si desitja assignar un estat de forma manual i obviar l'ajust automàtic de l'estat, marqueu aquesta casella. A continuació, pot seleccionar entre les opcions d'estat disponibles."
+msgstr "L'estat de la pertinença s'assigna i s'actualitza automàticament en base a les regles d'estat de la pertinença. No obstant, si desitja assignar un estat de forma manual i obviar l'ajust automàtic de l'estat, marqueu aquesta casella. A continuació, pot seleccionar entre les opcions d'estat disponibles."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid ""
 "The status you assign will remain in force, unless it is again modified on "
 "this screen. As long as the Status Override flag is checked, the automated "
 "membership status update script will NOT update this membership record."
-msgstr "L'estat que s'assigni es mantindrà en vigor, a menys que es modifiqui novament en aquesta pantalla. Sempre que la casella de l'estat sobreescrit estigui activada, l'automatització de l'actualització de l'estat de l'afiliació no s'executarà en aquest registre."
+msgstr "L'estat que s'assigni es mantindrà en vigor, a menys que es modifiqui novament en aquesta pantalla. Sempre que la casella de l'estat sobreescrit estigui activada, l'automatització de l'actualització de l'estat de la pertinença no s'executarà en aquest registre."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid ""
@@ -2206,7 +2206,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Click <a %1>Add Membership</a> to record a new membership."
-msgstr ""
+msgstr "Clica <a %1>Afegeix una pertinença</a> per registrar una nova pertinença."
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid ""
@@ -2216,7 +2216,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Current and inactive memberships for %1 are listed below."
-msgstr ""
+msgstr "Les pertinences vigents i inactives per %1 es llisten a continuació."
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Submit Credit Card Membership"
@@ -2228,11 +2228,11 @@ msgstr ""
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Active Memberships"
-msgstr ""
+msgstr "Pertinences actives"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Pending and Inactive Memberships"
-msgstr ""
+msgstr "Pertinences pendents i inactives"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid ""
@@ -2248,7 +2248,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/UserDashboard.tpl
 msgid "Expired / Inactive Memberships"
-msgstr ""
+msgstr "Pertinences expirades / inactives"
 
 #: templates/CRM/Member/Page/UserDashboard.tpl
 msgid "There are no memberships on record for you."
@@ -2431,7 +2431,7 @@ msgstr ""
 msgid ""
 "For auto-renewing memberships the emails are sent when each payment is "
 "received"
-msgstr ""
+msgstr "Per les pertinences auto renovables els correus electrònics s'envien cada vegada que es rep el pagament"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Membership Status Is Override?"
