--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-27 22:16+0000\n"
+"PO-Revision-Date: 2017-03-08 23:38+0000\n"
 "Last-Translator: Francesc Bassas i Bullich <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -915,7 +915,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Select at least one option from Membership Type(s)."
-msgstr "Seleccioneu com a mínim una opció del tipus d'afiliació(ns)"
+msgstr "Seleccioneu com a mínim una opció del tipus de pertinences."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Select at least one option from Contribution(s)."
