--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-06 15:54+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-08 14:56+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5277,7 +5277,7 @@ msgid ""
 "client and / or staff contact types. You can review and edit relationship "
 "types at <a href=\"%1\">Administer >> Option Lists >> Relationship "
 "Types</a>."
-msgstr ""
+msgstr "Definicija tipa veze je nevažeća za ulogu u predmetu za tipove kontakata klijenta i / ili osoblja. Možete pregledati i urediti tipove veza u  <a href=\"%1\">Administracija >> Liste opcija >> Tipovi veza</a>."
 
 #: CRM/Contact/Page/AJAX.php templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "merge"
