po: update po/pt_PT/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_PT/common-base.po
+++ b/po/pt_PT/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-07 18:51+0000\n"
+"PO-Revision-Date: 2017-03-08 12:23+0000\n"
 "Last-Translator: Emílio Fialho <skopemans@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
@@ -2035,7 +2035,7 @@ msgstr ""
 #: templates/CRM/Contact/Form/Task/AddToOrganization.tpl
 #: templates/CRM/Contact/Form/Task/Print.tpl xml/templates/civicrm_data.tpl
 msgid "State"
-msgstr "Estado"
+msgstr "Distrito"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search/Advanced.php
 #: xml/templates/civicrm_data.tpl
@@ -2443,7 +2443,7 @@ msgstr "Nome de utilizador"
 #: CRM/Contact/Form/Edit/Individual.php CRM/Contact/Form/Edit/Organization.php
 #: templates/CRM/Contact/Page/Inline/ContactInfo.tpl
 msgid "Nickname"
-msgstr "Alcunha"
+msgstr "Apelido"
 
 #: CRM/Contact/DAO/Contact.php CRM/Contact/Form/Edit/Organization.php
 #: templates/CRM/Contact/Page/Inline/ContactInfo.tpl
@@ -3166,7 +3166,7 @@ msgstr ""
 #: templates/CRM/Contact/Page/View/RelationshipSelector.tpl
 #: templates/CRM/common/navigation.js.tpl xml/templates/civicrm_data.tpl
 msgid "City"
-msgstr "Cidade"
+msgstr "Localidade"
 
 #: CRM/Contact/Form/Edit/Address.php CRM/Contact/Form/Search/Criteria.php
 #: xml/templates/civicrm_data.tpl
@@ -4203,7 +4203,7 @@ msgstr "Tamanho do segmento"
 
 #: CRM/Contact/Form/Search/Custom/Sample.php
 msgid "- any state/province -"
-msgstr "- qualquer estado/província - "
+msgstr "- qualquer distrito/região - "
 
 #: CRM/Contact/Form/Search/Custom/TagContributions.php
 #: CRM/Contact/Form/Task/Useradd.php
@@ -4834,7 +4834,7 @@ msgstr "Imprimir Lista de Contatos"
 
 #: CRM/Contact/Form/Task/ProximityCommon.php
 msgid "Country AND State/Province are required to search by distance."
-msgstr "País E Estado/Província são obrigatórios para a pesquisa por distância."
+msgstr "País E Distrito/Região são obrigatórios para a pesquisa por distância."
 
 #: CRM/Contact/Form/Task/ProximityCommon.php
 msgid "City OR Postal Code are required to search by distance."
@@ -7668,7 +7668,7 @@ msgstr ""
 
 #: CRM/Core/DAO/StateProvince.php
 msgid "State Abbreviation"
-msgstr "Abreviatura Estado"
+msgstr "Abreviatura do Distrito"
 
 #: CRM/Core/DAO/SystemLog.php
 msgid "System Log ID"
@@ -8437,7 +8437,7 @@ msgstr ""
 
 #: CRM/Core/Form.php
 msgid "Choose state first"
-msgstr ""
+msgstr "Escolha primeiro o Distrito"
 
 #: CRM/Core/Form.php
 msgid "- N/A -"
@@ -8445,7 +8445,7 @@ msgstr ""
 
 #: CRM/Core/Form.php
 msgid "State/Province does not match the selected Country"
-msgstr ""
+msgstr "Distrito/Região não corresponde ao País selecionado"
 
 #: CRM/Core/Form.php
 msgid "County does not match the selected State/Province"
@@ -9464,7 +9464,7 @@ msgstr "Selecione Região/Estado"
 
 #: CRM/Core/SelectValues.php CRM/Custom/Form/Field.php
 msgid "Multi-Select State/Province"
-msgstr "Multi-selecção de Estados/Províncias"
+msgstr "Multi-selecção de Distritos/Regiões"
 
 #: CRM/Core/SelectValues.php CRM/Custom/Form/Field.php
 msgid "Select Country"
@@ -10297,7 +10297,7 @@ msgstr "Inválido país por defeito."
 
 #: CRM/Custom/Form/Field.php
 msgid "The invalid default value for State/Province data type"
-msgstr "Valor predefinido inválido para o tipo de dado Estado/UF"
+msgstr "Valor predefinido inválido para o tipo de dado Distrito/Região"
 
 #: CRM/Custom/Form/Field.php
 msgid "Please do not include entity parameter (entity is always 'contact')"
@@ -10488,7 +10488,7 @@ msgstr "Digite 1 ou 0 como valor."
 
 #: CRM/Custom/Form/Option.php
 msgid "The invalid value for State/Province data type"
-msgstr "Valor inválido para o tipo de dado Estado/UF."
+msgstr "Valor inválido para o tipo de dado Distrito/Região."
 
 #: CRM/Custom/Form/Option.php
 msgid "Option \"%1\" has been deleted."
@@ -17427,7 +17427,7 @@ msgstr "Ligação"
 
 #: templates/CRM/Contact/Page/View/RelationshipSelector.tpl
 msgid "State/Prov"
-msgstr "Estado/UF"
+msgstr "Distrio/Região"
 
 #: templates/CRM/Contact/Page/View/RelationshipSelector.tpl
 msgid "There are no related contacts / organizations on record for you."
@@ -17497,7 +17497,7 @@ msgstr "Parte"
 
 #: templates/CRM/Contact/Page/View/Sunlight.tpl
 msgid "No data available for this contact. Please check city/state/zipcode"
-msgstr "Não há dados disponíveis para este contacto. Verifique cidade / estado / CEP"
+msgstr "Não há dados disponíveis para este contacto. Verifique localidade / Distrito / Código Postal"
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "You are not currently subscribed to any Groups."
@@ -22850,7 +22850,7 @@ msgstr "Morada (Casa)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "City (Home)"
-msgstr "Cidade (Casa)"
+msgstr "Localidade (Casa)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Postal Code (Home)"
@@ -22862,7 +22862,7 @@ msgstr "País (Casa)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "State (Home)"
-msgstr "Província (Casa)"
+msgstr "Distrito (Casa)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Home Phone"
@@ -24880,7 +24880,7 @@ msgstr ""
 
 #: CRM/Contact/BAO/Query.php
 msgid "State/Province %1 %2 %3"
-msgstr ""
+msgstr "Distrito/Região %1 %2 %3"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Preferred Communication Method %1 %2"
@@ -25433,7 +25433,7 @@ msgstr ""
 
 #: CRM/Core/DAO/StateProvince.php
 msgid "State ID"
-msgstr ""
+msgstr "Distrito ID"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Status Preference ID"
