po: update po/uk_UA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/uk_UA/common-base.po
+++ b/po/uk_UA/common-base.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-04 18:20+0000\n"
+"PO-Revision-Date: 2017-03-08 12:02+0000\n"
 "Last-Translator: Євген Шульга <yevhen.shulha@gmail.com>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -1098,7 +1098,7 @@ msgstr "- обрати тип діяльності -"
 #: CRM/Activity/Form/ActivityLinks.php CRM/Activity/Page/AJAX.php
 #: CRM/Contact/BAO/Contact.php
 msgid "Send an Email"
-msgstr "Надіслати електронну лист"
+msgstr "Надіслати повідомлення"
 
 #: CRM/Activity/Form/ActivityLinks.php CRM/Contact/Form/Task/SMSCommon.php
 msgid "Send SMS"
@@ -1915,7 +1915,7 @@ msgstr "Записати діяльність"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Add Pledge"
-msgstr "Додати заставу"
+msgstr "Додати зобов'язання"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Add Membership"
@@ -13819,7 +13819,7 @@ msgstr "Новий захід"
 
 #: templates/CRM/Activity/Form/ActivityLinks.tpl
 msgid "Record Activity:"
-msgstr "Запис заходу:"
+msgstr "Додати:"
 
 #: templates/CRM/Activity/Form/ActivityView.tpl
 msgid "Engagement Level"
