po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -12,7 +12,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2015
 # pantteri, 2013
 # Ettore Atalan <atalanttore@googlemail.com>, 2015-2016
-# Fabian <schuttenberg@systopia.de>, 2013-2016
+# Fabian <schuttenberg@systopia.de>, 2013-2017
 # Frederik Bugglin <frederik.bugglin@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # gnpma100 <gnpma100@gmail.com>, 2014
@@ -50,8 +50,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-07 14:10+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2017-03-09 14:18+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3230,7 +3230,7 @@ msgstr "Die Adresse eines anderen Kontakts mitnutzen"
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Share With"
-msgstr "Nutze mit"
+msgstr "Teile mit"
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Please select valid shared contact or a contact with valid address."
@@ -9136,7 +9136,7 @@ msgstr "CiviCRM übersetzen"
 
 #: CRM/Core/Permission.php
 msgid "Allow User to enable multilingual"
-msgstr ""
+msgstr "Darf Multilanguage Modus aktivieren"
 
 #: CRM/Core/Permission.php
 msgid "administer reserved groups"
@@ -18546,7 +18546,7 @@ msgstr "Suche nach Sichtbarkeit filtern"
 
 #: templates/CRM/Group/Form/Search.tpl templates/CRM/Group/Page/Group.hlp
 msgid "Update Smart Group Counts"
-msgstr ""
+msgstr "Dynamische Gruppen neu berechnen"
 
 #: templates/CRM/Group/Form/Search.tpl
 msgid "No matching Groups found for your search criteria. Suggestions:"
@@ -26562,7 +26562,7 @@ msgstr ""
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Showing %1 to %2 of %3 entries"
-msgstr ""
+msgstr "Einträge %1 bis %2 von insgesamt %3"
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "(filtered from %1 total entries)"
