--- a/po/de_DE/campaign.po
+++ b/po/de_DE/campaign.po
@@ -7,7 +7,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2015
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2016
-# Fabian <schuttenberg@systopia.de>, 2014-2016
+# Fabian <schuttenberg@systopia.de>, 2014-2017
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Michal Seidler, 2011
 # Jo <jo@caj-augsburg.de>, 2012
@@ -20,9 +20,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:24+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-03-09 13:33+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -102,7 +102,7 @@ msgstr "Enddatum der Kampagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External ID"
-msgstr ""
+msgstr "Externe Kampagnen ID"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
