po: update po/de_DE/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/drupal-civicrm.po
+++ b/po/de_DE/drupal-civicrm.po
@@ -5,19 +5,19 @@
 # Translators:
 # translatosaurus <accounts@drexler.eu>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2015,2017
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2014
 # Martin Peth <peth@systopia.de>, 2014-2015
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Sebastian Huter <sebastian.huter@gmail.com>, 2015
+# Sebastian Huter <inactive+sebastian.huter@transifex.com>, 2015
 # Wasilis Mandratzis <inactive+Wasilis@transifex.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-12-21 09:45+0000\n"
+"PO-Revision-Date: 2017-03-09 14:20+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -403,7 +403,7 @@ msgstr "Kontaktübersicht"
 
 #: CRM/Core/Permission.php
 msgid "translate CiviCRM"
-msgstr "CiviCRM übersetzen"
+msgstr "CiviCRM Multi-Lanugage"
 
 #: CRM/Core/Permission.php
 msgid "administer Tagsets"
