--- a/po/pl_PL/common-components.po
+++ b/po/pl_PL/common-components.po
@@ -5,7 +5,7 @@
 # Translators:
 # njakub <fiilozof@gmail.com>, 2014
 # kalor <karol.krzyczkowski@gmail.com>, 2015
-# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016-2017
 # Michał Mach <michau@gmail.com>, 2013
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -14,14 +14,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-03-09 15:45+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pl\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>=14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
 
 #: CRM/Admin/Form/CMSUser.php templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
@@ -964,7 +964,7 @@ msgstr "Nazwa ofiarodawcy lub e-mail"
 
 #: CRM/Contribute/Form/Search.php CRM/Report/Form/Contribute/SoftCredit.php
 msgid "Contributor Name"
-msgstr ""
+msgstr "Nazwa ofiarodawcy"
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Event/Form/Task/Batch.php
 #: CRM/Member/Form/Task/Batch.php
