--- a/po/pl_PL/case.po
+++ b/po/pl_PL/case.po
@@ -6,6 +6,7 @@
 # Adam Stachowicz <saibamenppl@gmail.com>, 2015
 # Emil D <emillo@emillo.cba.pl>, 2012
 # njakub <fiilozof@gmail.com>, 2014
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2017
 # Michał Mach <michau@gmail.com>, 2012
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -15,14 +16,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-03-09 13:24+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pl\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>=14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
 
 #: CRM/Case/BAO/Case.php templates/CRM/Case/Page/DashboardSelector.tpl
 #: xml/templates/message_templates/case_activity_html.tpl
@@ -351,6 +352,7 @@ msgid_plural "%1 Related Cases"
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+msgstr[3] ""
 
 #: CRM/Case/Form/CaseView.php
 msgid "Add Activity"
@@ -442,6 +444,7 @@ msgid_plural "%count cases moved to trash."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+msgstr[3] ""
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case permanently deleted."
@@ -449,6 +452,7 @@ msgid_plural "%count cases permanently deleted."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+msgstr[3] ""
 
 #: CRM/Case/Form/Task/Print.php
 msgid "Print Case List"
@@ -464,6 +468,7 @@ msgid_plural "%count cases restored from trash."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+msgstr[3] ""
 
 #: CRM/Case/Form/Task/Restore.php
 msgid "1 could not be restored."
@@ -471,6 +476,7 @@ msgid_plural "%count could not be restored."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+msgstr[3] ""
 
 #: CRM/Case/Info.php
 msgid "CiviCase Engine"
@@ -639,7 +645,7 @@ msgstr ""
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "Dowiedz się więcej..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
@@ -647,11 +653,11 @@ msgstr "Role"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Dodaj..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
-msgstr ""
+msgstr "Oś czasu"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
@@ -668,15 +674,15 @@ msgstr ""
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Is Manager"
-msgstr ""
+msgstr "Jest menadżerem"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Dodaj rolę"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Odniesienia"
 
 #: ang/crmCaseType.js
 msgid ""
