--- a/po/sv_SE/batch.po
+++ b/po/sv_SE/batch.po
@@ -7,13 +7,14 @@
 # Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Magnus Gröndahl <mangegrd@gmail.com>, 2017
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2012,2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 09:59+0000\n"
-"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
+"PO-Revision-Date: 2017-03-10 00:00+0000\n"
+"Last-Translator: Magnus Gröndahl <mangegrd@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -230,11 +231,11 @@ msgstr "Satsens betalningsmetod"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
-msgstr ""
+msgstr "Enhet batch ID"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch Table"
-msgstr ""
+msgstr "Enhet batch tabell"
 
 #: CRM/Batch/Form/Entry.php
 msgid ""
