--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -8,6 +8,7 @@
 # Julipan <stian@julipan.org>, 2011
 # Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015-2016
+# Magnus Gröndahl <mangegrd@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2016
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 23:35+0000\n"
-"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
+"PO-Revision-Date: 2017-03-09 23:47+0000\n"
+"Last-Translator: Magnus Gröndahl <mangegrd@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -202,7 +203,7 @@ msgstr "Etiketter per kolumn"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Horizontal Spacing"
-msgstr ""
+msgstr "Horisontellt avstånd"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Vertical Spacing"
@@ -210,11 +211,11 @@ msgstr "Vertikalt radavstånd"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Left Padding"
-msgstr ""
+msgstr "Vänster utfyllnad"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Top Padding"
-msgstr ""
+msgstr "Övre utfyllnad"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Selected Label Format has been deleted."
@@ -406,7 +407,7 @@ msgstr "Standardalternativ?"
 
 #: CRM/Admin/Form/Options.php
 msgid "Multiple Contact Merge"
-msgstr ""
+msgstr "Sammanslagning flera kontakter"
 
 #: CRM/Admin/Form/Options.php CRM/Admin/Form/ParticipantStatusType.php
 #: templates/CRM/Admin/Page/Options.tpl
@@ -668,7 +669,7 @@ msgstr "Inställningar för CiviContribute"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
-msgstr ""
+msgstr "Fakturaprefix"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for invoice"
@@ -756,7 +757,7 @@ msgstr "Sorteringsformat för personnamn"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Enable Popup Forms"
-msgstr ""
+msgstr "Tillåt popupformulär"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Input Format"
@@ -782,7 +783,7 @@ msgstr "Denna funktion gör det möjligt att anmäla sig till fler än ett arran
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "Dashboard entries"
-msgstr ""
+msgstr "Kontrollpanel anteckningar "
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid ""
