--- a/po/sv_SE/case.po
+++ b/po/sv_SE/case.po
@@ -5,14 +5,15 @@
 # Translators:
 # Britta Kjellin <info@eclaw.se>, 2014
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Magnus Gröndahl <mangegrd@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-03-10 00:10+0000\n"
+"Last-Translator: Magnus Gröndahl <mangegrd@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -297,7 +298,7 @@ msgstr "%1 sparad"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "Med kontakt(er)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -389,11 +390,11 @@ msgstr "Åtgärdsdatum - Från"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
-msgstr ""
+msgstr "Radera åtgärder"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
-msgstr ""
+msgstr "Välj kontakt"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
@@ -606,11 +607,11 @@ msgstr "Ärenderesurser"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Max Instances"
-msgstr ""
+msgstr "Maximala instanser"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Lägg till aktivitetstyp"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
@@ -630,7 +631,7 @@ msgstr ""
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "Lär dig mer..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
@@ -638,15 +639,15 @@ msgstr "Roller"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Lägg till..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
-msgstr ""
+msgstr "Tidslinje"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
-msgstr ""
+msgstr "Sekvens"
 
 #: ang/crmCaseType/list.html
 msgid ""
@@ -663,11 +664,11 @@ msgstr "Är ansvarig"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Lägg till roll"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Referens"
 
 #: ang/crmCaseType.js
 msgid ""
@@ -1133,11 +1134,11 @@ msgstr "Exportera ärenden"
 
 #: CRM/Case/Task.php
 msgid "Restore cases"
-msgstr ""
+msgstr "Återställ ärenden"
 
 #: CRM/Case/Task.php
 msgid "Print/merge Document"
-msgstr ""
+msgstr "Skriv ut/slå samman dokument"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
@@ -1177,7 +1178,7 @@ msgstr "Ärendetyper"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter"
-msgstr ""
+msgstr "Rapporter"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
@@ -1185,4 +1186,4 @@ msgstr "Exportera dokument"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
-msgstr ""
+msgstr "Är du säker på att du vill avsluta denna relation?"
